Updated readme to include Flex usage example. Added a font-size default to the column classes to counteract the font-size: 0 that is used to fix inline-block whitespace. Added more column classes so that all column widths have classes for all fractions.

--- a/assets/sass/zebra.scss
+++ b/assets/sass/zebra.scss
@@ -2,6 +2,7 @@
 /* ZEBRA SETTINGS */
 /************************/
 $site-width: 1400px;
+$font-size-base: 18px;
 
 /************************/
 /* ROW SETTINGS */
@@ -37,6 +38,7 @@ $site-width: 1400px;
 [class*='col-12'] {
 	display: inline-block;
 	vertical-align: top;
+	font-size: $font-size-base;
 }
 
 /*************/
@@ -59,6 +61,7 @@ $site-width: 1400px;
 /* 4 COLUMNS */
 /*************/
 .col-1of4 { width: percentage(1/4) }
+.col-2of4 { width: percentage(2/4) }
 .col-3of4 { width: percentage(3/4) }
 
 /*************/
@@ -73,6 +76,9 @@ $site-width: 1400px;
 /* 6 COLUMNS */
 /*************/
 .col-1of6 { width: percentage(1/6) }
+.col-2of6 { width: percentage(2/6) }
+.col-3of6 { width: percentage(3/6) }
+.col-4of6 { width: percentage(4/6) }
 .col-5of6 { width: percentage(5/6) }
 
 /*************/
@@ -89,8 +95,11 @@ $site-width: 1400px;
 /* 8 COLUMNS */
 /*************/
 .col-1of8 { width: percentage(1/8) }
+.col-2of8 { width: percentage(2/8) }
 .col-3of8 { width: percentage(3/8) }
+.col-4of8 { width: percentage(4/8) }
 .col-5of8 { width: percentage(5/8) }
+.col-6of8 { width: percentage(6/8) }
 .col-7of8 { width: percentage(7/8) }
 
 /*************/
@@ -98,8 +107,10 @@ $site-width: 1400px;
 /*************/
 .col-1of9 { width: percentage(1/9) }
 .col-2of9 { width: percentage(2/9) }
+.col-3of9 { width: percentage(3/9) }
 .col-4of9 { width: percentage(4/9) }
 .col-5of9 { width: percentage(5/9) }
+.col-6of9 { width: percentage(6/9) }
 .col-7of9 { width: percentage(7/9) }
 .col-8of9 { width: percentage(8/9) }
 
@@ -107,8 +118,13 @@ $site-width: 1400px;
 /* 10 COLUMNS */
 /**************/
 .col-1of10 { width: percentage(1/10) }
+.col-2of10 { width: percentage(2/10) }
 .col-3of10 { width: percentage(3/10) }
+.col-4of10 { width: percentage(4/10) }
+.col-5of10 { width: percentage(5/10) }
+.col-6of10 { width: percentage(6/10) }
 .col-7of10 { width: percentage(7/10) }
+.col-8of10 { width: percentage(8/10) }
 .col-9of10 { width: percentage(9/10) }
 
 /**************/
@@ -129,6 +145,13 @@ $site-width: 1400px;
 /* 12 COLUMNS */
 /**************/
 .col-1of12 { width: percentage(1/12) }
+.col-2of12 { width: percentage(2/12) }
+.col-3of12 { width: percentage(3/12) }
+.col-4of12 { width: percentage(4/12) }
 .col-5of12 { width: percentage(5/12) }
+.col-6of12 { width: percentage(6/12) }
 .col-7of12 { width: percentage(7/12) }
+.col-8of12 { width: percentage(8/12) }
+.col-9of12 { width: percentage(9/12) }
+.col-10of12 { width: percentage(10/12) }
 .col-11of12 { width: percentage(11/12) }
